# IcebergEBS

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  PLAN.md  README.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  migrate_prev.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vulture_whitelist.py
.claude/rules/: architecture.md  config-startup.md  fetchers.md  frontend.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  docs.yml  milestone-triage.yml  release.yml
alembic/: env.py
alembic/versions/: 20260625_2140_f9849169d73f_baseline_schema.py  20260628_0540_a1b2c3d4e5f6_timestamptz.py  20260628_0610_b2c3d4e5f6a7_fk_ondelete.py  20260630_0900_c3d4e5f6a7b8_inventory.py  20260715_0800_d4e5f6a7b8c9_fetchlog_store_outage.py  20260715_0900_e5f6a7b8c9d0_pending_alert_events.py  20260716_0900_f6a7b8c9d0e1_install_history_recent_index.py  20260717_1220_876baae8d10b_proxy_settings.py  20260717_1500_b7c8d9e0f1a2_oidc_sso.py  20260718_1720_39d4509e2a67_proxysettings_mode_check.py  20260719_2350_c9d0e1f2a3b4_fetchlog_recent_index.py  20260720_1000_a3b4c5d6e7f8_alertdestination_kind.py
app/: alert_queries.py  auth.py  config.py  database.py  deps.py  extension_queries.py  findings_view.py  inspector.py  logging_config.py  main.py  middleware.py  models.py  notifications.py  oidc_settings.py  permissions.py  proxy.py  proxy_settings.py  ratelimit.py  retention.py  scheduler.py  scheduler_state.py  scoring.py  services.py  threat_intel.py  utils.py  version.py  webhooks.py
app/fetchers/: __init__.py  base.py  chrome.py  edge.py  transport.py  vscode.py
app/oidc/: auth0.py  authentik.py  base.py  config.py  entra.py  okta.py  service.py
app/routes/: alerts.py  api.py  keys.py  oidc.py  oidc_settings.py  proxy.py  ui.py  users.py
app/senders/: __init__.py  base.py  content.py  email.py  http.py  slack.py  teams.py  tickets.py  webhook.py
app/templates/: account.html  account_keys.html  account_password.html  add_extension.html  admin_oidc.html  admin_proxy.html  admin_users.html  base.html  bulk_import.html  dashboard.html  extension_detail.html  help.html  login.html
caddy/: Caddyfile  Caddyfile.k8s  generate-dev-cert.sh  headers.caddy
docs/: RELEASING.md  REPOSITORY_SECURITY.md
docs/plans/: issue-37-outbound-integrations.md
e2e/: conftest.py  test_ui.py
examples/: alert_ingest.py  alert_ingest_iris.py
helm/: test-upgrade-guard.sh
helm/iceberg-ebs/: Chart.yaml  values.yaml
helm/iceberg-ebs/templates/: _helpers.tpl  caddy-configmap.yaml  configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  secret.yaml  service.yaml
helm/marvin/: Chart.yaml  values.yaml
helm/marvin/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
nginx/: generate-dev-cert.sh  nginx.conf  security_headers.conf
scripts/: README.md  capture_screenshots.py  seed_demo.py
scripts/screenshots/: README.md  seed_demo.py  shoot.py
static/css/: app.css  fonts.css  iceberg.css  input.css
static/js/: app.js  tailwind-config.js  theme-boot.js  topbar-search.js  trend-chart.js
static/js/pages/: account-keys.js  account-password.js  account.js  add-extension.js  admin-oidc.js  admin-proxy.js  admin-users.js  bulk-import.js  dashboard.js  extension-detail.js
tests/: conftest.py  test_account_destination_kinds.py  test_alerts.py  test_api.py  test_api_keys.py  test_auth.py  test_auth_hardening.py  test_backup.py  test_bulk_import.py  test_code_review_low.py  test_code_review_medium.py  test_compose_hardening.py  test_compose_secrets.py  test_config.py  test_csp_hash.py  test_csp_strict.py  test_csrf_origin.py  test_dashboard_stats.py  test_dashboard_ui.py  test_deploy_env.py  test_deps.py  test_design_tokens.py  test_examples.py  test_export.py  test_extension_accessors.py  test_extension_filters.py  test_fetchers.py  test_findings_view.py  test_graceful_shutdown.py  test_health.py  test_helm_caddy.py  test_helm_image_pin.py  test_helm_networkpolicy.py  test_helm_postgres.py  test_helm_security.py  test_inspector.py  test_inventory.py  test_migrations.py  test_nav_structure.py  test_no_third_party_origins.py  (+17 more)
website/: README.md  zensical.toml
website/docs/: alerts.md  deployment.md  index.md  scoring.md  security.md
website/docs/stylesheets/: fonts.css  iceberg.css
