# Dependency manifest + static-analysis config for the CI gates (ruff, mypy,
# bandit). See .github/workflows/ci.yml. `uv.lock` is the authoritative,
# committed resolution of everything below — refresh it with `uv lock` after any
# dependency change, or CI's `uv lock --check` / `uv sync --locked` will fail.

[project]
name = "iceberg-ebs"
# SemVer, PEP 440 spelling. The git tag uses the SemVer spelling instead
# (0.1.0b1 here == tag v0.1.0-beta.1) — see docs/RELEASING.md. Bumping this
# requires a `uv lock` refresh: uv.lock records the project's own version, so CI's
# `uv lock --check` fails otherwise.
version = "0.1.0b1"
description = "Risk scoring for Chromium and VS Code browser extensions"
requires-python = ">=3.14"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "IcebergAI" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "greenlet",
    "asyncpg",
    "httpx",
    "pydantic-settings",
    "itsdangerous",
    "jinja2",
    "python-multipart",
    "beautifulsoup4",
    "apscheduler",
    "bcrypt",
    "alembic",
    # OIDC SSO (#32). Authlib drives the Authorization-Code+PKCE flow, discovery,
    # JWKS fetch and ID-token validation; the per-provider adapters live in
    # app/oidc/. Same floor as the sibling deep_thought project.
    "authlib>=1.6",
]

[project.urls]
Repository = "https://github.com/IcebergAI/IcebergEBS"

[dependency-groups]
# Test + static-analysis tooling. NOT runtime dependencies: the Dockerfile builds
# the runtime venv with `uv sync --no-dev`, which is what physically keeps pytest
# and respx out of the production image. psycopg2-binary backs the sync Alembic
# CLI / tests/test_migrations.py only — production migrates over the async
# connection at startup and never needs it.
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "psycopg2-binary",
    "ruff",
    "mypy",
    "bandit[toml]",
    "pip-audit",
    # Tailwind v4 standalone-CLI wrapper for `make css` / the Dockerfile
    # tailwind-builder stage (#85). The CLI binary itself is pinned via the
    # TAILWINDCSS_VERSION env var at each build site, not here.
    "pytailwindcss>=0.3",
]

[tool.uv]
# IcebergEBS is deployed as source + uvicorn, never built into or installed as a
# wheel, so uv treats it as a virtual project: `uv sync` resolves the
# dependencies without needing the source tree, which is what lets the Dockerfile
# install them from pyproject.toml + uv.lock alone in a cacheable layer.
package = false

[tool.ruff]
target-version = "py313"  # ruff has no py314 target yet; 3.13 rules are a safe superset
line-length = 120

[tool.ruff.lint]
# Real-bug + import-hygiene rules. Deliberately no "UP" (pyupgrade): it would
# rewrite the documented `timezone.utc` / `Optional[...]` conventions repo-wide
# (see CLAUDE.md) — out of scope for CI setup.
select = ["E", "F", "W", "I", "B"]
# E501 (line length) is handled by the formatter; the codebase has intentionally
# long where-clauses / comments that we don't want to hard-wrap.
# B008 fires on FastAPI's `= Depends(...)` / `= Query(...)` defaults, which is the
# required framework idiom — not a bug.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# Test modules legitimately do mid-file imports (section grouping, and conftest
# sets env vars before importing the app).
"tests/*" = ["E402"]

[tool.mypy]
# Contract checking at module boundaries: mypy enforces types on the pure
# logic / interface modules (scoring, threat_intel, validation, config, …)
# where annotations are meaningful. The ORM-query modules are excluded below —
# mypy can't see through SQLModel's declarative attributes (it reads
# `Extension.last_updated` as a plain `datetime`, not a column), so query-building
# code produces overwhelming false positives there. pydantic.mypy teaches mypy
# about BaseModel/Settings construction.
python_version = "3.14"
files = ["app"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false

# ORM-query / DB-session modules: excluded from type errors because SQLModel's
# column expressions (`.where`, `.order_by`, `Model.col.desc()`, column `select()`)
# are not understood by mypy without a SQLModel-aware plugin (none is maintained).
[[tool.mypy.overrides]]
module = [
    "app.routes.*",
    "app.alert_queries",
    "app.extension_queries",
    "app.services",
    "app.scheduler",
    "app.notifications",
    "app.retention",
    "app.database",
    "app.fetchers.*",
    # ORM-touching SSO modules (#32); the pure OIDC core (app.oidc.base/config +
    # the adapters) stays type-checked.
    "app.oidc.service",
    "app.oidc_settings",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.vulture]
# Dead-code gate (#101). Run in CI via `uvx vulture` (not the dev group: vulture would
# need a uv.lock refresh, and this repo runs standalone linters ephemerally like zizmor).
# The decorator/name allowlist is the whole trick — without it vulture flags every
# FastAPI route handler and Pydantic validator as dead. `dispatch` is the Starlette
# BaseHTTPMiddleware hook (framework-invoked, never called by us). vulture_whitelist.py
# carries the reviewed false positives (NamedTuple / SQLModel / response-model fields).
min_confidence = 60
paths = ["app", "vulture_whitelist.py"]
ignore_decorators = ["@router.*", "@app.*", "@field_validator", "@model_validator", "@asynccontextmanager"]
ignore_names = ["model_config", "cls", "dispatch"]
